// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scatter_multi_measure 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "sizeRange": [
        8,
        24,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "sizeRange": [
          8,
          24,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "east-A",
      "__Dim_Color__": "east-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 10,
      "__MeaYId__": "sales",
      "__MeaYValue__": 20,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 10,
          "region": "east",
          "sales": 20,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 10,
        "region": "east",
        "sales": 20,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "profit": 10,
      "region": "east",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "east-B",
      "__Dim_Color__": "east-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 30,
      "__MeaYId__": "sales",
      "__MeaYValue__": 60,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 30,
          "region": "east",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 30,
        "region": "east",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "profit": 30,
      "region": "east",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "west-A",
      "__Dim_Color__": "west-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 15,
      "__MeaYId__": "sales",
      "__MeaYValue__": 44,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 15,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 15,
          "region": "west",
          "sales": 44,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 15,
        "region": "west",
        "sales": 44,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "profit": 15,
      "region": "west",
      "sales": 44,
    },
    {
      "__Dim_ColorId__": "west-B",
      "__Dim_Color__": "west-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 50,
      "__MeaYId__": "sales",
      "__MeaYValue__": 60,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 50,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 50,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "profit": 50,
      "region": "west",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "east-A",
      "__Dim_Color__": "east-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 15,
      "__MeaYId__": "sales",
      "__MeaYValue__": 21,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 15,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 15,
          "region": "east",
          "sales": 21,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 15,
        "region": "east",
        "sales": 21,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "profit": 15,
      "region": "east",
      "sales": 21,
    },
    {
      "__Dim_ColorId__": "east-B",
      "__Dim_Color__": "east-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 1,
      "__MeaYId__": "sales",
      "__MeaYValue__": 10,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 1,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 1,
          "region": "east",
          "sales": 10,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 1,
        "region": "east",
        "sales": 10,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "profit": 1,
      "region": "east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "west-A",
      "__Dim_Color__": "west-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 35,
      "__MeaYId__": "sales",
      "__MeaYValue__": 40,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 35,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 35,
          "region": "west",
          "sales": 40,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 35,
        "region": "west",
        "sales": 40,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "profit": 35,
      "region": "west",
      "sales": 40,
    },
    {
      "__Dim_ColorId__": "west-B",
      "__Dim_Color__": "west-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 55,
      "__MeaYId__": "sales",
      "__MeaYValue__": 60,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 55,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 55,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 55,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "profit": 55,
      "region": "west",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "east-A",
      "__Dim_Color__": "east-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 20,
      "__MeaYId__": "sales",
      "__MeaYValue__": 30,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 20,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 20,
          "region": "east",
          "sales": 30,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 20,
        "region": "east",
        "sales": 30,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "profit": 20,
      "region": "east",
      "sales": 30,
    },
    {
      "__Dim_ColorId__": "east-B",
      "__Dim_Color__": "east-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 2,
      "__MeaYId__": "sales",
      "__MeaYValue__": 55,
      "__OriginalData__": {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 2,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 2,
          "region": "east",
          "sales": 55,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 2,
        "region": "east",
        "sales": 55,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "profit": 2,
      "region": "east",
      "sales": 55,
    },
    {
      "__Dim_ColorId__": "west-A",
      "__Dim_Color__": "west-A",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 40,
      "__MeaYId__": "sales",
      "__MeaYValue__": 75,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 40,
          "region": "west",
          "sales": 75,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 40,
        "region": "west",
        "sales": 75,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "profit": 40,
      "region": "west",
      "sales": 75,
    },
    {
      "__Dim_ColorId__": "west-B",
      "__Dim_Color__": "west-B",
      "__Dim_Detail__": "销售额",
      "__MeaName__": "销售额",
      "__MeaXId__": "profit",
      "__MeaXValue__": 60,
      "__MeaYId__": "sales",
      "__MeaYValue__": 65,
      "__OriginalData__": {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "利润",
        "__MeaName__": "利润",
        "__MeaXId__": "profit",
        "__MeaXValue__": 60,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 60,
          "region": "west",
          "sales": 65,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 60,
        "region": "west",
        "sales": 65,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "profit": 60,
      "region": "west",
      "sales": 65,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
        },
        "measureId": "__MeaXId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaXValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 12,
          "max": 60,
          "min": 1,
          "sum": 333,
        },
      },
      "foldInfoList": [
        {
          "foldMap": {
            "profit": "利润",
          },
          "measureId": "__MeaXId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaXValue__",
          "statistics": {
            "colorMax": -Infinity,
            "colorMin": Infinity,
            "count": 12,
            "max": 60,
            "min": 1,
            "sum": 333,
          },
        },
        {
          "foldMap": {
            "sales": "销售额",
          },
          "measureId": "__MeaYId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaYValue__",
          "statistics": {
            "colorMax": -Infinity,
            "colorMin": Infinity,
            "count": 12,
            "max": 75,
            "min": 10,
            "sum": 540,
          },
        },
      ],
      "id": "scatter",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "east-A": "east-A",
          "east-B": "east-B",
          "west-A": "west-A",
          "west-B": "west-B",
        },
        "colorItems": [
          "east-A",
          "east-B",
          "west-A",
          "west-B",
          "east-A",
          "east-B",
          "west-A",
          "west-B",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "encoding": "xAxis",
      "id": "date",
    },
    {
      "alias": "区域",
      "encoding": "color",
      "id": "region",
    },
    {
      "alias": "城市",
      "encoding": "color",
      "id": "city",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "region",
      "city",
    ],
    "detail": [
      "__MeaName__",
    ],
    "label": [
      "city",
      "count",
    ],
    "size": [],
    "tooltip": [
      "date",
      "region",
      "city",
      "count",
    ],
    "y": [
      "profit",
      "sales",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "利润",
      "children": [
        {
          "alias": "利润",
          "id": "profit",
        },
      ],
      "id": "0-x",
    },
    {
      "alias": "销售额,数量",
      "children": [
        {
          "alias": "销售额",
          "id": "sales",
        },
      ],
      "id": "0-y",
    },
  ],
}
`;

exports[`scatter_multi_measure 2`] = `
{
  "animation": true,
  "axes": [
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "right": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "bottom",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "利润 & 销售额",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "east-A",
      "east-B",
      "west-A",
      "west-B",
      "east-A",
      "east-B",
      "west-A",
      "west-B",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
    "yField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {},
    "id": "scatter",
    "values": [
      {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 10,
        "__MeaYId__": "sales",
        "__MeaYValue__": 20,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-A",
          "__Dim_Color__": "east-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2019",
            "profit": 10,
            "region": "east",
            "sales": 20,
          },
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 10,
          "region": "east",
          "sales": 20,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 10,
        "region": "east",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 30,
        "__MeaYId__": "sales",
        "__MeaYValue__": 60,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-B",
          "__Dim_Color__": "east-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2019",
            "profit": 30,
            "region": "east",
            "sales": 60,
          },
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 30,
          "region": "east",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 30,
        "region": "east",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 15,
        "__MeaYId__": "sales",
        "__MeaYValue__": 44,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-A",
          "__Dim_Color__": "west-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 15,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2019",
            "profit": 15,
            "region": "west",
            "sales": 44,
          },
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 15,
          "region": "west",
          "sales": 44,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 15,
        "region": "west",
        "sales": 44,
      },
      {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 50,
        "__MeaYId__": "sales",
        "__MeaYValue__": 60,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-B",
          "__Dim_Color__": "west-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2019",
            "profit": 50,
            "region": "west",
            "sales": 60,
          },
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 50,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 50,
        "region": "west",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 15,
        "__MeaYId__": "sales",
        "__MeaYValue__": 21,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-A",
          "__Dim_Color__": "east-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 15,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2020",
            "profit": 15,
            "region": "east",
            "sales": 21,
          },
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 15,
          "region": "east",
          "sales": 21,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 15,
        "region": "east",
        "sales": 21,
      },
      {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 1,
        "__MeaYId__": "sales",
        "__MeaYValue__": 10,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-B",
          "__Dim_Color__": "east-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 1,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2020",
            "profit": 1,
            "region": "east",
            "sales": 10,
          },
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 1,
          "region": "east",
          "sales": 10,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 1,
        "region": "east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 35,
        "__MeaYId__": "sales",
        "__MeaYValue__": 40,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-A",
          "__Dim_Color__": "west-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 35,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2020",
            "profit": 35,
            "region": "west",
            "sales": 40,
          },
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 35,
          "region": "west",
          "sales": 40,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 35,
        "region": "west",
        "sales": 40,
      },
      {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 55,
        "__MeaYId__": "sales",
        "__MeaYValue__": 60,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-B",
          "__Dim_Color__": "west-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 55,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2020",
            "profit": 55,
            "region": "west",
            "sales": 60,
          },
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 55,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 55,
        "region": "west",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "east-A",
        "__Dim_Color__": "east-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 20,
        "__MeaYId__": "sales",
        "__MeaYValue__": 30,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-A",
          "__Dim_Color__": "east-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 20,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2021",
            "profit": 20,
            "region": "east",
            "sales": 30,
          },
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 20,
          "region": "east",
          "sales": 30,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 20,
        "region": "east",
        "sales": 30,
      },
      {
        "__Dim_ColorId__": "east-B",
        "__Dim_Color__": "east-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 2,
        "__MeaYId__": "sales",
        "__MeaYValue__": 55,
        "__OriginalData__": {
          "__Dim_ColorId__": "east-B",
          "__Dim_Color__": "east-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 2,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2021",
            "profit": 2,
            "region": "east",
            "sales": 55,
          },
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 2,
          "region": "east",
          "sales": 55,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 2,
        "region": "east",
        "sales": 55,
      },
      {
        "__Dim_ColorId__": "west-A",
        "__Dim_Color__": "west-A",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 40,
        "__MeaYId__": "sales",
        "__MeaYValue__": 75,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-A",
          "__Dim_Color__": "west-A",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "city": "A",
            "count": 100,
            "date": "2021",
            "profit": 40,
            "region": "west",
            "sales": 75,
          },
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 40,
          "region": "west",
          "sales": 75,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 40,
        "region": "west",
        "sales": 75,
      },
      {
        "__Dim_ColorId__": "west-B",
        "__Dim_Color__": "west-B",
        "__Dim_Detail__": "销售额",
        "__MeaName__": "销售额",
        "__MeaXId__": "profit",
        "__MeaXValue__": 60,
        "__MeaYId__": "sales",
        "__MeaYValue__": 65,
        "__OriginalData__": {
          "__Dim_ColorId__": "west-B",
          "__Dim_Color__": "west-B",
          "__Dim_Detail__": "利润",
          "__MeaName__": "利润",
          "__MeaXId__": "profit",
          "__MeaXValue__": 60,
          "__OriginalData__": {
            "city": "B",
            "count": 100,
            "date": "2021",
            "profit": 60,
            "region": "west",
            "sales": 65,
          },
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 60,
          "region": "west",
          "sales": 65,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 60,
        "region": "west",
        "sales": 65,
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
    },
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
        "scaleX": 1.4,
        "scaleY": 1.4,
        "stroke": [Function],
      },
    },
    "style": {},
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "visible": false,
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": "数量",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "scatter",
  "xField": "__MeaXValue__",
  "yField": "__MeaYValue__",
}
`;

exports[`scatter_multi_measure 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "east-A": "east-A",
    "east-B": "east-B",
    "west-A": "west-A",
    "west-B": "west-B",
  },
  "colorItems": [
    {
      "alias": "east-A",
      "id": "east-A",
    },
    {
      "alias": "east-B",
      "id": "east-B",
    },
    {
      "alias": "west-A",
      "id": "west-A",
    },
    {
      "alias": "west-B",
      "id": "west-B",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
